# automonkeytype

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
automonkeytype/: __init__.py  __main__.py  browser.py  cli.py  controller.py  engine.py  humanizer.py  keyboard.py  scraper.py
tests/: conftest.py  test_ci_workflow.py  test_controller.py  test_humanizer.py  test_integration.py  test_keyboard.py  test_live_smoke.py
tests/fixtures/: monkeytype_fixture.html
